--- a/src/scrollbar.scss
+++ b/src/scrollbar.scss
@@ -10,7 +10,7 @@
 
 ::-webkit-scrollbar-thumb {
   border: none;
-  border-radius: 0;
+  border-radius: 2px;
   background: var(--gray-8);
 }
 
